--- a/vibration/silent-ignore.html
+++ b/vibration/silent-ignore.html
@@ -28,7 +28,7 @@
     <script>
       if (supportsVibration()) {
 	  test(function () { 
-              assert_true(navgator.vibrate(1000), "vibrate() returns true when vibration is not supported");
+              assert_true(navigator.vibrate(1000), "vibrate() returns true when vibration is not supported");
           }, "Calling vibrate returns true");
       }
     </script>
