--- a/mediacapture-streams/stream-api/introduction/disabled-video-black.html
+++ b/mediacapture-streams/stream-api/introduction/disabled-video-black.html
@@ -3,7 +3,8 @@
 <head>
 <title>A disabled video track is rendered as blackness</title>
 <link rel="author" title="Dominique Hazael-Massieux" href="mailto:dom@w3.org"/>
-<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#navigatorusermedia">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#introduction">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#mediastreams-as-media-elements">
 <link rel='stylesheet' href='/resources/testharness.css' media='all'/>
 </head>
 <body>
