--- a/mediacapture-streams/stream-api/mediastreamtrack/mediastreamtrack-init.html
+++ b/mediacapture-streams/stream-api/mediastreamtrack/mediastreamtrack-init.html
@@ -3,7 +3,11 @@
 <head>
 <title>getUserMedia({video:true}) creates a stream with a properly initialized video track</title>
 <link rel="author" title="Dominique Hazael-Massieux" href="mailto:dom@w3.org"/>
-<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#mediastreamtrack">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#idl-def-MediaStreamTrack">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#life-cycle-and-media-flow">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#widl-MediaStreamTrack-kind">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#widl-MediaStreamTrack-enabled">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#widl-MediaStreamTrack-readyState">
 <link rel='stylesheet' href='/resources/testharness.css' media='all'/>
 </head>
 <body>
