--- a/mediacapture-streams/mediastreams-as-media-elements/video-assignment.html
+++ b/mediacapture-streams/mediastreams-as-media-elements/video-assignment.html
@@ -3,7 +3,7 @@
 <head>
 <title>Assigning mediastream to a video element</title>
 <link rel="author" title="Dominique Hazael-Massieux" href="mailto:dom@w3.org"/>
-<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#navigatorusermedia">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#mediastreams-as-media-elements">
 <link rel='stylesheet' href='/resources/testharness.css' media='all'/>
 </head>
 <body>
