--- a/mediacapture-streams/obtaining-local-multimedia-content/navigatorusermedia/empty-option-param.html
+++ b/mediacapture-streams/obtaining-local-multimedia-content/navigatorusermedia/empty-option-param.html
@@ -3,7 +3,7 @@
 <head>
 <title>getUserMedia({}) aborts with NOT_SUPPORTED_ERR</title>
 <link rel="author" title="Dominique Hazael-Massieux" href="mailto:dom@w3.org"/>
-<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#navigatorusermedia">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#widl-NavigatorUserMedia-getUserMedia-void-MediaStreamConstraints-constraints-NavigatorUserMediaSuccessCallback-successCallback-NavigatorUserMediaErrorCallback-errorCallback">
 <link rel='stylesheet' href='/resources/testharness.css' media='all'/>
 </head>
 <body>
@@ -18,14 +18,15 @@
 <script>
 var t = async_test("Tests that getUserMedia raises a NOT_SUPPORTED_ERR exception when used with an empty options parameter");
 t.step( function () {
+  // TODO This is no longer what's in the spec, see https://www.w3.org/Bugs/Public/show_bug.cgi?id=22211
   assert_throws("NOT_SUPPORTED_ERR", 
     function () { 
-      navigator.getUserMedia({}, function (stream) {
+      navigator.getUserMedia({}, t.step_func(function (stream) {
         assert_unreached("This should never be triggered since the constraints parameter is empty");
         t.done();
-      }, function (error) {
+      }), t.step_func(function (error) {
         assert_unreached("This should never be triggered since the constraints parameter is empty");
-         });
+         }));
   });
   t.done();
 });
