--- a/mediacapture-streams/stream-api/mediastream/mediastream-addtrack.html
+++ b/mediacapture-streams/stream-api/mediastream/mediastream-addtrack.html
@@ -4,6 +4,7 @@
 <title>Adding a track to a MediaStream</title>
 <link rel="author" title="Dominique Hazael-Massieux" href="mailto:dom@w3.org"/>
 <link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#widl-MediaStreamTrackList-add-void-MediaStreamTrack-track">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#event-mediastream-addtrack">
 <link rel='stylesheet' href='/resources/testharness.css' media='all'/>
 </head>
 <body>
