--- a/mediacapture-streams/stream-api/mediastream/mediastream-idl.html
+++ b/mediacapture-streams/stream-api/mediastream/mediastream-idl.html
@@ -3,7 +3,12 @@
 <head>
 <title>MediaStream constructor algorithm</title>
 <link rel="author" title="Dominique Hazael-Massieux" href="mailto:dom@w3.org"/>
-<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#navigatorusermedia">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#idl-def-MediaStream">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#widl-MediaStream-id">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#mediastream">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#event-mediastream-ended">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#widl-MediaStreamTrack-stop-void">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#widl-MediaStreamTrack-clone-MediaStreamTrack">
 <link rel='stylesheet' href='/resources/testharness.css' media='all'/>
 </head>
 <body>
