--- a/mediacapture-streams/stream-api/mediastream/stream-ended.html
+++ b/mediacapture-streams/stream-api/mediastream/stream-ended.html
@@ -3,7 +3,8 @@
 <head>
 <title>getUserMedia({video:true}) creates a stream with ended set to false</title>
 <link rel="author" title="Dominique Hazael-Massieux" href="mailto:dom@w3.org"/>
-<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#attributes">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#widl-MediaStream-ended">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#event-mediastream-ended">
 <link rel='stylesheet' href='/resources/testharness.css' media='all'/>
 </head>
 <body>
