--- a/mediacapture-streams/stream-api/mediastream/video.html
+++ b/mediacapture-streams/stream-api/mediastream/video.html
@@ -3,7 +3,9 @@
 <head>
 <title>getUserMedia({video:true}) creates a stream with one video track</title>
 <link rel="author" title="Dominique Hazael-Massieux" href="mailto:dom@w3.org"/>
-<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#navigatorusermedia">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#widl-NavigatorUserMedia-getUserMedia-void-MediaStreamConstraints-constraints-NavigatorUserMediaSuccessCallback-successCallback-NavigatorUserMediaErrorCallback-errorCallback">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#widl-MediaStreamTrack-kind">
+
 <link rel='stylesheet' href='/resources/testharness.css' media='all'/>
 </head>
 <body>
