--- a/mediacapture-streams/stream-api/video-and-audio-tracks/audiostreamtrack.html
+++ b/mediacapture-streams/stream-api/video-and-audio-tracks/audiostreamtrack.html
@@ -3,7 +3,7 @@
 <head>
 <title>AudioStreamTrack is defined</title>
 <link rel="author" title="Dominique Hazael-Massieux" href="mailto:dom@w3.org"/>
-<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#navigatorusermedia">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#idl-def-AudioStreamTrack">
 <link rel='stylesheet' href='/resources/testharness.css' media='all'/>
 </head>
 <body>
