--- a/mediacapture-streams/stream-api/mediastream/mediastream-id-manual.html
+++ b/mediacapture-streams/stream-api/mediastream/mediastream-id-manual.html
@@ -3,7 +3,7 @@
 <head>
 <title>getUserMedia() creates a stream with a proper id</title>
 <link rel="author" title="Dominique Hazael-Massieux" href="mailto:dom@w3.org"/>
-<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#navigatorusermedia">
+<link rel="help" href="http://dev.w3.org/2011/webrtc/editor/getusermedia.html#widl-MediaStream-id">
 <link rel='stylesheet' href='/resources/testharness.css' media='all'/>
 </head>
 <body>
