unprefixing contentEditable tests

--- a/contributors/adobe/submitted/regions/contentEditable/contentEditable-002.html
+++ b/contributors/adobe/submitted/regions/contentEditable/contentEditable-002.html
@@ -15,13 +15,13 @@
 		<link rel="stylesheet" href="support/common.css">
 		<style>
 		.content {
-			-webkit-flow-into: flow;
+			flow-into: flow;
 			font-family: Times, serif;
 			font-size: 20px;
 			line-height: 1em;
 		}
 		.region {
-			-webkit-flow-from: flow;
+			flow-from: flow;
 			width: 300px;
 			height: 300px;
 			border: 2px solid black;
