--- a/contributors/adobe/submitted/regions/contentEditable/contentEditable-003.html
+++ b/contributors/adobe/submitted/regions/contentEditable/contentEditable-003.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="support/common.css">
 		<style>
 		.flowed {
-			-webkit-flow-into: flow;
+			flow-into: flow;
 		}
 		.content {
 			font-family: Times, serif;
@@ -27,7 +27,7 @@
 			border: 2px solid blue;
 		}
 		.region {
-			-webkit-flow-from: flow;
+			flow-from: flow;
 			width: 300px;
 			height: 200px;
 			border: 2px solid black;
