--- a/contributors/adobe/submitted/regions/contentEditable/contentEditable-006.html
+++ b/contributors/adobe/submitted/regions/contentEditable/contentEditable-006.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" href="support/common.css">
 		<style>
 		.flowed {
-			-webkit-flow-into: flow;
+			flow-into: flow;
 		}
 		.content {
 			font-family: Times, serif;
@@ -24,7 +24,7 @@
 			line-height: 1em;
 		}
 		.region {
-			-webkit-flow-from: flow;
+			flow-from: flow;
 			width: 300px;
 			height: auto;
 			max-height: 150px;
