--- a/contributors/adobe/submitted/regions/contentEditable/contentEditable-007.html
+++ b/contributors/adobe/submitted/regions/contentEditable/contentEditable-007.html
@@ -21,10 +21,10 @@
 			border: 2px solid blue;
 		}
 		.content {
-			-webkit-flow-into: flow;
+			flow-into: flow;
 		}
 		.region {
-			-webkit-flow-from: flow;
+			flow-from: flow;
 			width: 300px;
 			height: 200px;
 			border: 2px solid black;
