--- a/contributors/adobe/submitted/regions/contentEditable/contentEditable-011.html
+++ b/contributors/adobe/submitted/regions/contentEditable/contentEditable-011.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="support/common.css">
 		<style>
 		.flowed {
-			-webkit-flow-into: flow;
+			flow-into: flow;
 		}
 		.content {
 			font-family: Times, serif;
@@ -23,7 +23,7 @@
 			line-height: 1em;
 		}
 		.region {
-			-webkit-flow-from: flow;
+			flow-from: flow;
 			width: 200px;
 			height: 200px;
 			border: 2px solid black;
