--- a/contributors/adobe/submitted/regions/contentEditable/contentEditable-012.html
+++ b/contributors/adobe/submitted/regions/contentEditable/contentEditable-012.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="support/common.css">
 		<style>
 		.content {
-			-webkit-flow-into: flow;
+			flow-into: flow;
 			font-family: Ahem;
 			font-size: 20px;
 			line-height: 1em;
@@ -30,8 +30,8 @@
 		}
 
 		.region {
-			-webkit-flow-from: flow;
-			-webkit-region-fragment: break;
+			flow-from: flow;
+			region-fragment: break;
 			display: inline-block;
 			width: 100px;
 			height: 100px;
