--- a/contributors/adobe/submitted/regions/contentEditable/contentEditable-005.html
+++ b/contributors/adobe/submitted/regions/contentEditable/contentEditable-005.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="support/common.css">
 		<style>
 		.flowed {
-			-webkit-flow-into: flow;
+			flow-into: flow;
 		}
 		.content {
 			font-family: Times, serif;
@@ -22,7 +22,7 @@
 			line-height: 1em;
 		}
 		.region {
-			-webkit-flow-from: flow;
+			flow-from: flow;
 			width: 300px;
 			height: 75px;
 			border: 2px solid black;
