small fixes for the regions and contentEditable tests

--- a/contributors/adobe/submitted/regions/contentEditable/contentEditable-011.html
+++ b/contributors/adobe/submitted/regions/contentEditable/contentEditable-011.html
@@ -51,8 +51,10 @@
 			This is some text that should be editable. Just like the <em><span class="inline-marker green"></span> <span id="marked-one">editable</span> <span class="inline-marker blue"></span></em> text between these markers.
 		</div>
 	
-		<div class="region">
-			This is some editable text that you should not be able to see, with <span class="inline-marker green"></span> <span id="marked-two">colored markers</span> <span class="inline-marker blue"></span>.
+		<div class="region" contentEditable="true">
+			<p>
+				This is some editable text that you should not be able to see, with <span class="inline-marker green"></span> <span id="marked-two">colored markers</span> <span class="inline-marker blue"></span>.
+			</p>
 		</div>
 
 		<script type="text/javascript" src="support/helpers.js"></script>
