--- a/contributors/adobe/submitted/regions/contentEditable/contentEditable-010.html
+++ b/contributors/adobe/submitted/regions/contentEditable/contentEditable-010.html
@@ -52,6 +52,7 @@
 	
 		<div contentEditable="true" class="region">
 			This is some editable text that you should not be able to see, with <span class="inline-marker green"></span> <span id="marked-two">colored markers</span> <span class="inline-marker blue"></span>.
+			<p>&nbsp;</p>
 		</div>
 
 		<script type="text/javascript" src="support/helpers.js"></script>
