--- a/contributors/ttwf_shanghai/myst729/grid-layout-subgrid.html
+++ b/contributors/ttwf_shanghai/myst729/grid-layout-subgrid.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CSS Grid Layout Test: basic</title>
+    <title>CSS Grid Layout Test: subgrid</title>
     <link rel="author" title="Leo Deng" href="mailto:myst.dg@gmail.com">
     <link rel="help" href="http://www.w3.org/TR/css3-grid-layout/">
-    <link rel="match" href="reference/grid-layout-basic-ref.html">
-    <meta name="assert" content="the layout should behave the same as reference.">
+    <link rel="match" href="reference/grid-layout-subgrid-ref.html">
+    <meta name="assert" content="the subgrid layout should behave the same as reference.">
     <style>
       body {
         margin: 0;
@@ -21,16 +21,28 @@
         background: #eee;
         display: grid;
         grid-definition-columns: 100px 1fr;
-        grid-definition-rows: 80px 1fr 50px;
+        grid-definition-rows: 1fr 50px;
       }
       .a {
         background: blue;
         grid-column: 1;
         grid-row: 1;
-        grid-row-span: 2;
       }
       .b {
         background: yellow;
+        grid-column: 2;
+        grid-row: 1;
+        display: grid;
+        grid-definition-columns: 50px 1fr;
+        grid-definition-rows: 1fr 30px;
+      }
+      .b1 {
+        background: orange;
+        grid-column: 1;
+        grid-row: 1;
+      }
+      .b2 {
+        background: cyan;
         grid-column: 2;
         grid-row: 2;
       }
@@ -38,7 +50,7 @@
         background: pink;
         grid-column: 1;
         grid-column-span: 2;
-        grid-row: 3;
+        grid-row: 2;
       }
     </style>
   </head>
@@ -46,7 +58,10 @@
     <p id="caseTitle">The test passes if it has the same visual effect as reference.</p>
     <div id="grid">
       <div class="a">a</div>
-      <div class="b">b</div>
+      <div class="b">
+        <div class="b1">b1</div>
+        <div class="b2">b2</div>
+      </div>
       <div class="c">c</div>
     </div>
   </body>
