--- a/contributors/ttwf_shanghai/myst729/grid-layout-placement-shorthands.html
+++ b/contributors/ttwf_shanghai/myst729/grid-layout-placement-shorthands.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CSS Grid Layout Test: basic</title>
+    <title>CSS Grid Layout Test: placement shorthand</title>
     <link rel="author" title="Leo Deng" href="mailto:myst.dg@gmail.com">
-    <link rel="help" href="http://www.w3.org/TR/css3-grid-layout/#track-sizing">
+    <link rel="help" href="http://www.w3.org/TR/css3-grid-layout/#placement-shorthands">
     <link rel="match" href="reference/grid-layout-basic-ref.html">
     <meta name="assert" content="the layout should behave the same as reference.">
     <style>
@@ -30,10 +30,8 @@
         background: blue;
         grid-column: 1;
         -ms-grid-column: 1;
-        grid-row: 1;
-        -ms-grid-row: 1;
-        grid-row-span: 2;
-        -ms-grid-row-span: 2;
+        grid-row: 1 / span 2;
+        -ms-grid-row: 1 / span 2;
       }
       .b {
         background: yellow;
@@ -44,10 +42,8 @@
       }
       .c {
         background: pink;
-        grid-column: 1;
-        -ms-grid-column: 1;
-        grid-column-span: 2;
-        -ms-grid-column-span: 2;
+        grid-column: 1 / span 2;
+        -ms-grid-column: 1 / span 2;
         grid-row: 3;
         -ms-grid-row: 3;
       }
