add -webkit- for compatibility

--- a/contributors/ttwf_shanghai/xiatian/submitted/scaley.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/scaley.html
@@ -14,6 +14,7 @@
           width: 100px;
           background-color:#fff;
           margin-top: 200px;
+          transform: scaleY(2);
           -webkit-transform: scaleY(2);
       }
   </style>
