--- a/contributors/ttwf_shanghai/xiatian/submitted/scalex.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/scalex.html
@@ -14,6 +14,7 @@
           width: 100px;
           background-color:#fff;
           margin-left: 500px;
+          transform: scaleX(2);
           -webkit-transform: scaleX(2);
       }
   </style>
