--- a/contributors/ttwf_shanghai/xiatian/submitted/scaley_ref.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/scaley_ref.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
  <head>
-  <title>CSS Test: rotateY with perspective produces a trapezoid</title>
+  <title>CSS Test: test scale y</title>
   <link rel="author" title="Ebay Inc." href="xiatian@ebay.com"/>
   <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-3d-rendering"/>
   <meta name="flags" content="" />
