--- a/contributors/ttwf_shanghai/xiatian/submitted/rotate_x_45deg.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/rotate_x_45deg.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
  <head>
-  <title>CSS Test: test scale x</title>
+  <title>CSS Test: rotateX with perspective produces a trapezoid</title>
   <link rel="author" title="Ebay Inc." href="xiatian@ebay.com"/>
   <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-3d-rendering"/>
   <link rel="match" href="refer.html"/>
   <meta name="flags" content="" />
-  <meta name="assert" content="scale x 2"/>
+  <meta name="assert" content="Rotate 45 degree in y axis"/>
   <style type="text/css">
       .container {
           border: 1px solid black;
           height: 100px;
           width: 100px;
           background-color:#fff;
-          margin-left: 500px;
-          transform: scaleX(2);
-          -webkit-transform: scaleX(2);
+      }
+      .transformed {
+          transform: rotateX(45deg);
+          -webkit-transform: rotateX(45deg);
+          background-color:green;
+          height: 100px;
       }
   </style>
   
  </head>
  <body>
   <div class="container">
+    <div class="transformed"></div>
   </div>
- <p>scale x 2</p>
+  <p>45 degree rotate on X axis</p>
 </body>
 </html>
