--- a/contributors/ttwf_shanghai/xiatian/submitted/rotate_x_45deg.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/rotate_x_45deg.html
@@ -16,7 +16,7 @@
       }
       .transformed {
           transform: rotateX(45deg);
-          -webkit-transform: rotateX(45deg);
+          //-webkit-transform: rotateX(45deg);
           background-color:green;
           height: 100px;
       }
