--- a/contributors/ttwf_shanghai/xiatian/submitted/scalex.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/scalex.html
@@ -15,7 +15,7 @@
           background-color:#fff;
           margin-left: 500px;
           transform: scaleX(2);
-          -webkit-transform: scaleX(2);
+          //-webkit-transform: scaleX(2);
       }
   </style>
   
