--- a/contributors/ttwf_shanghai/xiatian/submitted/scaley.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/scaley.html
@@ -15,7 +15,7 @@
           background-color:#fff;
           margin-top: 200px;
           transform: scaleY(2);
-          -webkit-transform: scaleY(2);
+          //-webkit-transform: scaleY(2);
       }
   </style>
   
