--- a/contributors/ttwf_shanghai/xiatian/submitted/translate.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/translate.html
@@ -18,10 +18,11 @@
            width: 100px;
            height: 100px;
            border: solid red;
+          
+          //-webkit-transform: translate(100px, 100px);
 
-          -webkit-transform: translate(100px, 100px);
-
-          -o-transform:translate(100px, 100px) ; 
+          //-o-transform:translate(100px, 100px) ; 
+          
 
           transform: translate(100px, 100px);
       }
