--- a/contributors/ttwf_shanghai/myst729/grid-layout-auto-tracks.html
+++ b/contributors/ttwf_shanghai/myst729/grid-layout-auto-tracks.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CSS Grid Layout Test: basic</title>
+    <title>CSS Grid Layout Test: auto tracks</title>
     <link rel="author" title="Leo Deng" href="mailto:myst.dg@gmail.com">
-    <link rel="help" href="http://www.w3.org/TR/css3-grid-layout/#track-sizing">
-    <link rel="match" href="reference/grid-layout-basic-ref.html">
+    <link rel="help" href="http://www.w3.org/TR/css3-grid-layout/#auto-tracks">
+    <link rel="match" href="reference/grid-layout-auto-tracks-ref">
     <meta name="assert" content="the layout should behave the same as reference.">
     <style>
       body {
@@ -16,15 +16,15 @@
         height: 40px;
       }
       #grid {
-        height: 300px;
-        width: 400px;
+        height: 150px;
+        width: 100px;
         background: #eee;
         display: grid;
         display: -ms-grid;
-        grid-definition-columns: 100px 300px;
-        -ms-grid-columns: 100px 300px;
-        grid-definition-rows: 80px 170px 50px;
-        -ms-grid-rows: 80px 170px 50px;
+        grid-definition-columns: 100px;
+        -ms-grid-columns: 100px;
+        grid-definition-rows: 100px 50px;
+        -ms-grid-rows: 100px 50px;
       }
       .a {
         background: blue;
@@ -37,15 +37,29 @@
         background: yellow;
         grid-column: 2;
         -ms-grid-column: 2;
-        grid-row: 2;
-        -ms-grid-row: 2;
+        grid-row: 1;
+        -ms-grid-row: 1;
       }
       .c {
         background: pink;
         grid-column: 1;
         -ms-grid-column: 1;
+        grid-row: 2;
+        -ms-grid-row: 2;
+      }
+      .d {
+        background: green;
+        grid-column: 2;
+        -ms-grid-column: 2;
         grid-row: 3;
         -ms-grid-row: 3;
+      }
+      .e {
+        background: cyan;
+        grid-column: 1;
+        -ms-grid-column: 1;
+        grid-row: 4;
+        -ms-grid-row: 4;
       }
     </style>
   </head>
@@ -53,8 +67,10 @@
     <p id="caseTitle">The test passes if it has the same visual effect as reference.</p>
     <div id="grid">
       <div class="a">a</div>
-      <div class="b">b</div>
+      <div class="b"><div style="width:50px">b</div></div>
       <div class="c">c</div>
+      <div class="d">d</div>
+      <div class="e">e</div>
     </div>
   </body>
 </html>
