--- a/contributors/ttwf_shanghai/myst729/grid-layout-lines-shorthands.html
+++ b/contributors/ttwf_shanghai/myst729/grid-layout-lines-shorthands.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CSS Grid Layout Test: grid lines</title>
+    <title>CSS Grid Layout Test: grid lines shorthands</title>
     <link rel="author" title="Leo Deng" href="mailto:myst.dg@gmail.com">
     <link rel="help" href="http://www.w3.org/TR/css3-grid-layout/#grid-line">
-    <link rel="match" href="reference/grid-layout-basic-ref.html">
+    <link rel="match" href="reference/grid-layout-grid-span-ref.html">
     <meta name="assert" content="the subgrid layout should behave the same as reference.">
     <style>
       body {
@@ -21,10 +21,10 @@
         background: #eee;
         display: grid;
         display: -ms-grid;
-        grid-definition-columns: "left" 100px "center" 1fr "right";
-        -ms-grid-columns: "left" 100px "center" 1fr "right";
-        grid-definition-rows: "one" 80px "two" 1fr "three" 50px "four";
-        -ms-grid-rows: "one" 80px "two" 1fr "three" 50px "four";
+        grid-definition-columns: "left" 100px "center" 300px "right";
+        -ms-grid-columns: "left" 100px "center" 300px "right";
+        grid-definition-rows: "one" 80px "two" 170px "three" 50px "four";
+        -ms-grid-rows: "one" 80px "two" 170px "three" 50px "four";
       }
       .a {
         background: blue;
