change the message

--- a/contributors/ttwf_shanghai/xiatian/submitted/scalex.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/scalex.html
@@ -21,8 +21,9 @@
   
  </head>
  <body>
+  <p>There should be one box with height 100px, width 200px; and border-right and border-left should be 2 px</p>
   <div class="container">
   </div>
- <p>scale x 2</p>
+ 
 </body>
 </html>
