--- a/contributors/ttwf_shanghai/xiatian/submitted/scaley.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/scaley.html
@@ -21,8 +21,9 @@
   
  </head>
  <body>
+   <p style="margin-top:70px;">There should be one box with height 200px, width 100px; and border-top and border-bottom should be 2 px</p>
   <div class="container">
   </div>
- <p style="margin-top:70px;">scale y 2</p>
+
 </body>
 </html>
