--- a/contributors/ttwf_shanghai/xiatian/submitted/rotate_x_45deg copy.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/rotate_x_45deg copy.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
  <head>
-  <title>CSS Test: rotateY with perspective produces a trapezoid</title>
+  <title>CSS Test: rotateX with perspective produces a trapezoid</title>
   <link rel="author" title="Ebay Inc." href="xiatian@ebay.com"/>
   <link rel="help" href="http://www.w3.org/TR/css3-transforms/#transform-3d-rendering"/>
+  <link rel="match" href="refer.html"/>
   <meta name="flags" content="" />
   <meta name="assert" content="Rotate 45 degree in y axis"/>
   <style type="text/css">
       .container {
+          border: 1px solid black;
           height: 100px;
           width: 100px;
           background-color:#fff;
-          border:1px solid black;
       }
-
       .transformed {
-          position: relative;
-          left:15px;
-          height: 100px;
-          width: 70.7px;
+          
+          -webkit-transform: rotateX(45deg) rotateY(45deg);
+          -moz-transform: rotateX(45deg) rotateY(45deg);
+          transform: rotateX(60deg);
           background-color:green;
-        }
-   </style>
-   
+          height: 100px;
+      }
+  </style>
+  
  </head>
  <body>
    <p>There is one green area in the box</p>
