--- a/contributors/ttwf_shanghai/xiatian/submitted/rotate_x_45deg_ref.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/rotate_x_45deg_ref.html
@@ -25,9 +25,9 @@
    
  </head>
  <body>
+   <p>There is one green area in the box</p>
   <div class="container">
     <div class="transformed"></div>
   </div>
-  <p>45 degree rotate on X axis</p>
 </body>
 </html>
