--- a/contributors/ttwf_shanghai/xiatian/submitted/rotate_y_45deg.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/rotate_y_45deg.html
@@ -24,9 +24,10 @@
   
  </head>
  <body>
+  <p>There is one green area in the box</p>
   <div class="container">
     <div class="transformed"></div>
   </div>
-  <p>45 degree rotate on y axis</p>
+  
 </body>
 </html>
