--- a/contributors/ttwf_shanghai/xiatian/submitted/scaley_ref.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/scaley_ref.html
@@ -21,8 +21,9 @@
   
  </head>
  <body>
+  <p>There should be one box with height 200px, width 100px; and border-top and border-bottom should be 2 px</p>
   <div class="container">
   </div>
-  <p>scale y 2</p>
+  
 </body>
 </html>
