--- a/contributors/ttwf_shanghai/xiatian/submitted/translate.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/translate.html
@@ -17,7 +17,7 @@
       .inner {
            width: 100px;
            height: 100px;
-           border: solid red;
+           background-color: green;
           
           //-webkit-transform: translate(100px, 100px);
 
@@ -30,21 +30,12 @@
   
  </head>
  <body>
+  <p style="margin-top:70px;">There should be one green area, which is located at (100px, 100px) relative to the outer box</p>
+  
   <div class="container">
       <div class="inner">
-        <pre style='font-size:7px;'>
-  width: 100px;
-  height: 100px;
-  border: solid red;
-
-  -webkit-transform: translate(100px, 100px);
-
-  -o-transform:translate(100px, 100px) ; 
-
-  transform: translate(100px, 100px);
-        </pre>
       </div>
   </div>
- <p style="margin-top:70px;">translate x = 100px, y = 100px</p>
+ 
 </body>
 </html>
