--- a/contributors/ttwf_shanghai/xiatian/submitted/translate_ref.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/translate_ref.html
@@ -17,9 +17,9 @@
       .inner {
           width: 100px;
           height: 100px;
-          border: solid red;
+          background-color: green;
 
-          position: absolute;
+          position: relative;
           left:100px;
           top:100px;
       }
@@ -27,19 +27,11 @@
   
  </head>
  <body>
+  <p style="margin-top:70px;">There should be one green area, which is located at (100px, 100px) relative to the outer box</p>
   <div class="container">
       <div class="inner">
-        <pre style='font-size:7px;'>
-  width: 100px;
-  height: 100px;
-  border: solid red;
-
-  position: absolute;
-  left:100px;
-  top:100px;
-        </pre>
       </div>
   </div>
- <p style="margin-top:70px;">translate x = 100px, y = 100px</p>
+ 
 </body>
 </html>
