update resources path

--- a/FileAPI/FileReader_InvalidStateError.html
+++ b/FileAPI/FileReader_InvalidStateError.html
@@ -2,9 +2,9 @@
 <title>FileAPI Test: FileReader InvalidStateError Exception</title>
 <link rel="author" title="Yinkan Li" href="mailto:liyinkan.biz@gmail.com">
 <link rel="help" href="http://www.w3.org/TR/FileAPI">
-<script src="../resources/testharness.js"></script>
-<script src="../resources/testharnessreport.js"></script>
-<link rel="stylesheet" href="../resources/testharness.css">
+<script src="/resources/testharness.js"></script>
+<script src="/resources/testharnessreport.js"></script>
+<link rel="stylesheet" href="/resources/testharness.css">
 <div id="log"></div>
 <script>
 
