--- a/contributors/ttwf_shanghai/xiatian/submitted/translate_ref.html
+++ b/contributors/ttwf_shanghai/xiatian/submitted/translate_ref.html
@@ -27,7 +27,7 @@
   
  </head>
  <body>
-  <p style="margin-top:70px;">There should be one green area, which is located at (100px, 100px) relative to the outer box</p>
+  <p style="margin-top:70px;">You should see only one green area, no red area.</p>
   <div class="container">
       <div class="inner">
       </div>
