update help information

--- a/FileAPI/FileReader_InvalidStateError.html
+++ b/FileAPI/FileReader_InvalidStateError.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <title>FileAPI Test: FileReader InvalidStateError Exception</title>
 <link rel="author" title="Yinkan Li" href="mailto:liyinkan.biz@gmail.com">
-<link rel="help" href="http://www.w3.org/TR/FileAPI">
+<link rel="help" href="http://www.w3.org/TR/FileAPI/#MultipleReads">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <link rel="stylesheet" href="/resources/testharness.css">
